# Barcelona-Data-Trivia

./: .gitattributes  .gitignore  README.md  cli.py  datasets.yaml  llm_utils.py  main.py  pyproject.toml  utils.py
evals/: README.md
